# fake-pkg-config

./: README.md  default.nix  pyproject.toml  shell.nix  tests.nix
.helix/: languages.toml
src/: fake-pkg-config.bash
src/fake_pkg_config/: __init__.py  args.py  libs.py  pkg_config.py
