[project]
name = "fake-pkg-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ross Smyth" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
fake-pkg-config = "fake_pkg_config:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
